version/0.9/_sources/changelog.rst.txt
.. _ref_release_notes:

Release notes
#############

This document contains the release notes for the project.

.. vale off

.. towncrier release notes start

`0.9.4 <https://github.com/ansys/pyconceptev/releases/tag/v0.9.4>`_ - May 06, 2025
==================================================================================

.. tab-set::


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - matplotlib as an optional
          - `#228 <https://github.com/ansys/pyconceptev/pull/228>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - CHORE: Bump jupyterlab from 4.3.5 to 4.3.6
          - `#205 <https://github.com/ansys/pyconceptev/pull/205>`_

        * - CHORE: Bump pytest-cov from 5.0.0 to 6.1.1
          - `#216 <https://github.com/ansys/pyconceptev/pull/216>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - docs: Update ``CONTRIBUTORS.md`` with the latest contributors
          - `#215 <https://github.com/ansys/pyconceptev/pull/215>`_

        * - chore: update CHANGELOG for v0.9.3
          - `#219 <https://github.com/ansys/pyconceptev/pull/219>`_


`0.9.3 <https://github.com/ansys/pyconceptev/releases/tag/v0.9.3>`_ - April 17, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - Feature/better client connection
          - `#213 <https://github.com/ansys/pyconceptev/pull/213>`_

        * - update actions to v9 and change python release values
          - `#218 <https://github.com/ansys/pyconceptev/pull/218>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.9.2
          - `#210 <https://github.com/ansys/pyconceptev/pull/210>`_


`0.9.2 <https://github.com/ansys/pyconceptev/releases/tag/v0.9.2>`_ - March 24, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.9.0
          - `#198 <https://github.com/ansys/pyconceptev/pull/198>`_

        * - 208-make-optional-dependency
          - `#209 <https://github.com/ansys/pyconceptev/pull/209>`_


`0.9.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.9.0>`_ - March 10, 2025
====================================================================================

.. tab-set::


  .. tab-item:: Added

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - example script for reading from design instance ids
          - `#153 <https://github.com/ansys/pyconceptev/pull/153>`_

        * - Feature/improved automated testing
          - `#168 <https://github.com/ansys/pyconceptev/pull/168>`_

        * - Feature/get project name
          - `#169 <https://github.com/ansys/pyconceptev/pull/169>`_

        * - feature/get_project_or_create
          - `#183 <https://github.com/ansys/pyconceptev/pull/183>`_

        * - added function to get any job file for example input file
          - `#191 <https://github.com/ansys/pyconceptev/pull/191>`_

        * - start for adding support for py3.13
          - `#193 <https://github.com/ansys/pyconceptev/pull/193>`_


  .. tab-item:: Fixed

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - fix: AUTHORS file format
          - `#160 <https://github.com/ansys/pyconceptev/pull/160>`_

        * - updated account name specification
          - `#171 <https://github.com/ansys/pyconceptev/pull/171>`_


  .. tab-item:: Dependencies

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - CHORE: Bump pre-commit from 3.8.0 to 4.0.1
          - `#144 <https://github.com/ansys/pyconceptev/pull/144>`_

        * - CHORE: Bump pytest from 8.3.3 to 8.3.4
          - `#161 <https://github.com/ansys/pyconceptev/pull/161>`_

        * - CHORE: Bump jupyterlab from 4.3.1 to 4.3.3
          - `#164 <https://github.com/ansys/pyconceptev/pull/164>`_

        * - CHORE: Bump pytest-asyncio from 0.24.0 to 0.25.0
          - `#165 <https://github.com/ansys/pyconceptev/pull/165>`_

        * - CHORE: Bump jupytext from 1.16.4 to 1.16.6
          - `#166 <https://github.com/ansys/pyconceptev/pull/166>`_

        * - CHORE: Bump jupyterlab from 4.3.3 to 4.3.4
          - `#167 <https://github.com/ansys/pyconceptev/pull/167>`_

        * - CHORE: Bump twine from 5.1.1 to 6.1.0
          - `#170 <https://github.com/ansys/pyconceptev/pull/170>`_

        * - CHORE: Bump pytest-asyncio from 0.25.0 to 0.25.2
          - `#172 <https://github.com/ansys/pyconceptev/pull/172>`_

        * - CHORE: Bump nbsphinx from 0.9.5 to 0.9.6
          - `#173 <https://github.com/ansys/pyconceptev/pull/173>`_

        * - CHORE: Bump tox from 4.23.2 to 4.24.1
          - `#174 <https://github.com/ansys/pyconceptev/pull/174>`_

        * - CHORE: Bump pytest-cov from 5.0.0 to 6.0.0
          - `#175 <https://github.com/ansys/pyconceptev/pull/175>`_

        * - CHORE: Bump pytest-asyncio from 0.25.2 to 0.25.3
          - `#179 <https://github.com/ansys/pyconceptev/pull/179>`_

        * - CHORE: Bump websockets from 14.1 to 15.0
          - `#181 <https://github.com/ansys/pyconceptev/pull/181>`_

        * - CHORE: Bump sphinx-gallery from 0.18.0 to 0.19.0
          - `#185 <https://github.com/ansys/pyconceptev/pull/185>`_

        * - CHORE: Bump pydantic-settings from 2.7.1 to 2.8.1
          - `#186 <https://github.com/ansys/pyconceptev/pull/186>`_

        * - CHORE: Bump matplotlib from 3.9.0 to 3.9.4
          - `#194 <https://github.com/ansys/pyconceptev/pull/194>`_

        * - CHORE: Bump websockets from 15.0 to 15.0.1
          - `#196 <https://github.com/ansys/pyconceptev/pull/196>`_

        * - CHORE: Bump tox from 4.24.1 to 4.24.2
          - `#197 <https://github.com/ansys/pyconceptev/pull/197>`_


  .. tab-item:: Maintenance

    .. list-table::
        :header-rows: 0
        :widths: auto

        * - chore: update CHANGELOG for v0.8
          - `#159 <https://github.com/ansys/pyconceptev/pull/159>`_

        * - chore: bump version version
          - `#182 <https://github.com/ansys/pyconceptev/pull/182>`_


`0.8 <https://github.com/ansys/pyconceptev/releases/tag/v0.8>`_ - 2024-11-29
============================================================================

Added
^^^^^

- added custom exceptions `#157 <https://github.com/ansys/pyconceptev/pull/157>`_


Fixed
^^^^^

- default value was called only once bug `#154 <https://github.com/ansys/pyconceptev/pull/154>`_
- added a product_id to create_new_concept so it doesn't call ocm to often `#155 <https://github.com/ansys/pyconceptev/pull/155>`_
- added gateway timeout exception for get_results function `#156 <https://github.com/ansys/pyconceptev/pull/156>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump pytest-cov from 5.0.0 to 6.0.0 `#143 <https://github.com/ansys/pyconceptev/pull/143>`_
- CHORE: Bump websockets from 14.0 to 14.1 `#146 <https://github.com/ansys/pyconceptev/pull/146>`_
- CHORE: Bump jupyterlab from 4.3.0 to 4.3.1 `#151 <https://github.com/ansys/pyconceptev/pull/151>`_
- CHORE: Bump msal from 1.31.0 to 1.31.1 `#152 <https://github.com/ansys/pyconceptev/pull/152>`_
- CHORE: Bump tomli from 2.1.0 to 2.2.1 `#158 <https://github.com/ansys/pyconceptev/pull/158>`_


Maintenance
^^^^^^^^^^^

- chore: update CHANGELOG for v0.7.0 `#150 <https://github.com/ansys/pyconceptev/pull/150>`_

`0.7.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.7.0>`_ - 2024-11-18
================================================================================

Added
^^^^^

- gets filtered version and example for motor loss map upload `#149 <https://github.com/ansys/pyconceptev/pull/149>`_


Fixed
^^^^^

- added additional auth check on get results `#148 <https://github.com/ansys/pyconceptev/pull/148>`_


Maintenance
^^^^^^^^^^^

- chore: update CHANGELOG for v0.6 `#145 <https://github.com/ansys/pyconceptev/pull/145>`_
- CHORE: Bump dev version into 0.7.dev0 `#147 <https://github.com/ansys/pyconceptev/pull/147>`_

`0.6 <https://github.com/ansys/pyconceptev/releases/tag/v0.6>`_ - 2024-11-13
============================================================================

Added
^^^^^

- added a get_concept function `#131 <https://github.com/ansys/pyconceptev/pull/131>`_
- improve test that was calling out to external endpoint `#136 <https://github.com/ansys/pyconceptev/pull/136>`_
- feature/account_checking `#142 <https://github.com/ansys/pyconceptev/pull/142>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump ansys-sphinx-theme from 1.0.9 to 1.0.11 `#124 <https://github.com/ansys/pyconceptev/pull/124>`_
- CHORE: Bump tomli from 2.0.1 to 2.0.2 `#129 <https://github.com/ansys/pyconceptev/pull/129>`_
- CHORE: Bump websockets from 13.0.1 to 14.0 `#135 <https://github.com/ansys/pyconceptev/pull/135>`_
- CHORE: Bump jupyterlab from 4.2.5 to 4.3.0 `#137 <https://github.com/ansys/pyconceptev/pull/137>`_
- CHORE: Bump sphinx-autobuild from 2024.9.17 to 2024.10.3 `#139 <https://github.com/ansys/pyconceptev/pull/139>`_
- CHORE: Bump tox from 4.19.0 to 4.23.2 `#140 <https://github.com/ansys/pyconceptev/pull/140>`_


Maintenance
^^^^^^^^^^^

- chore: update CHANGELOG for v0.5.0 `#123 <https://github.com/ansys/pyconceptev/pull/123>`_
- CHORE: Bump ansys/actions from 7 to 8 `#128 <https://github.com/ansys/pyconceptev/pull/128>`_
- CI: Remove index jobs `#133 <https://github.com/ansys/pyconceptev/pull/133>`_
- update to remove security issues `#141 <https://github.com/ansys/pyconceptev/pull/141>`_

`0.5 <https://github.com/ansys/pyconceptev/releases/tag/v0.5>`_ - 2024-09-20
============================================================================

Added
^^^^^

- added a timeout option `#118 <https://github.com/ansys/pyconceptev/pull/118>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v0.4.0 `#106 <https://github.com/ansys/pyconceptev/pull/106>`_
- CHORE: Bump development version to 0.5.dev0 `#107 <https://github.com/ansys/pyconceptev/pull/107>`_
- BUILD: Update dependencies range `#109 <https://github.com/ansys/pyconceptev/pull/109>`_
- chore: update CHANGELOG for v0.4.2 `#115 <https://github.com/ansys/pyconceptev/pull/115>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump pre-commit from 3.7.1 to 3.8.0 `#92 <https://github.com/ansys/pyconceptev/pull/92>`_
- CHORE: Bump jupytext from 1.16.3 to 1.16.4 `#95 <https://github.com/ansys/pyconceptev/pull/95>`_
- CHORE: Bump sphinx-design from 0.6.0 to 0.6.1 `#96 <https://github.com/ansys/pyconceptev/pull/96>`_
- CHORE: Bump plotly from 5.24.0 to 5.24.1 `#116 <https://github.com/ansys/pyconceptev/pull/116>`_
- CHORE: Bump ansys-sphinx-theme from 0.16.6 to 1.0.8 `#117 <https://github.com/ansys/pyconceptev/pull/117>`_
- CHORE: Bump ansys-sphinx-theme from 1.0.8 to 1.0.9 `#119 <https://github.com/ansys/pyconceptev/pull/119>`_
- CHORE: Bump tox from 4.18.1 to 4.19.0 `#120 <https://github.com/ansys/pyconceptev/pull/120>`_
- CHORE: Bump sphinx-autobuild from 2024.9.3 to 2024.9.17 `#121 <https://github.com/ansys/pyconceptev/pull/121>`_


Maintenance
^^^^^^^^^^^

- CHORE: Bump ansys/actions from 6 to 7 `#97 <https://github.com/ansys/pyconceptev/pull/97>`_

`0.4.2 <https://github.com/ansys/pyconceptev/releases/tag/v0.4.2>`_ - 2024-09-13
================================================================================

Changed
^^^^^^^

- Testing, do not merge `#114 <https://github.com/ansys/pyconceptev/pull/114>`_


Fixed
^^^^^

- added a product id getter `#111 <https://github.com/ansys/pyconceptev/pull/111>`_


Miscellaneous
^^^^^^^^^^^^^

- CHORE: Revert changelog changes after release failure `#112 <https://github.com/ansys/pyconceptev/pull/112>`_

`0.4.1 <https://github.com/ansys/pyconceptev/releases/tag/v0.4.1>`_ - 2024-09-12
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.4.0 `#106 <https://github.com/ansys/pyconceptev/pull/106>`_
- CHORE: Bump development version to 0.5.dev0 `#107 <https://github.com/ansys/pyconceptev/pull/107>`_
- BUILD: Update dependencies range `#109 <https://github.com/ansys/pyconceptev/pull/109>`_

`0.4 <https://github.com/ansys/pyconceptev/releases/tag/v0.4>`_ - 2024-09-04
============================================================================

Added
^^^^^

- Added progress monitor and tests `#105 <https://github.com/ansys/pyconceptev/pull/105>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v0.3.0 `#102 <https://github.com/ansys/pyconceptev/pull/102>`_
- CHORE: Bump dev version into 0.4.dev0 `#103 <https://github.com/ansys/pyconceptev/pull/103>`_

`0.3.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.3.0>`_ - 2024-08-22
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.2.0 `#93 <https://github.com/ansys/pyconceptev/pull/93>`_
- CHORE: Bump dev version to 0.3.dev0 `#94 <https://github.com/ansys/pyconceptev/pull/94>`_
- CHORE: Revert "chore: update CHANGELOG for v0.3.0 (#99)" `#100 <https://github.com/ansys/pyconceptev/pull/100>`_


Miscellaneous
^^^^^^^^^^^^^

- Refactor concept creation process `#98 <https://github.com/ansys/pyconceptev/pull/98>`_

`0.2.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.2.0>`_ - 2024-07-30
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.5 `#89 <https://github.com/ansys/pyconceptev/pull/89>`_

`0.1.5 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.5>`_ - 2024-07-29
================================================================================

Added
^^^^^

- ansys id login `#78 <https://github.com/ansys/pyconceptev/pull/78>`_


Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.4 `#69 <https://github.com/ansys/pyconceptev/pull/69>`_


Fixed
^^^^^

- slowed down pinging the results server `#80 <https://github.com/ansys/pyconceptev/pull/80>`_
- Fix/documentation links `#88 <https://github.com/ansys/pyconceptev/pull/88>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump ansys-sphinx-theme from 0.16.5 to 0.16.6 `#70 <https://github.com/ansys/pyconceptev/pull/70>`_
- CHORE: Bump twine from 5.1.0 to 5.1.1 `#76 <https://github.com/ansys/pyconceptev/pull/76>`_
- CHORE: Bump importlib-metadata from 7.1.0 to 8.2.0 `#81 <https://github.com/ansys/pyconceptev/pull/81>`_
- CHORE: Bump jupyterlab from 4.2.2 to 4.2.4 `#82 <https://github.com/ansys/pyconceptev/pull/82>`_
- CHORE: Bump sphinx-autodoc-typehints from 2.1.1 to 2.2.3 `#83 <https://github.com/ansys/pyconceptev/pull/83>`_
- CHORE: Bump tox from 4.15.1 to 4.16.0 `#84 <https://github.com/ansys/pyconceptev/pull/84>`_
- CHORE: Bump sphinx from 7.3.7 to 7.4.7 `#85 <https://github.com/ansys/pyconceptev/pull/85>`_
- CHORE: Bump plotly from 5.22.0 to 5.23.0 `#86 <https://github.com/ansys/pyconceptev/pull/86>`_
- CHORE: Bump jupytext from 1.16.2 to 1.16.3 `#87 <https://github.com/ansys/pyconceptev/pull/87>`_

`0.1.4 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.4>`_ - 2024-06-13
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.3 `#67 <https://github.com/ansys/pyconceptev/pull/67>`_
- DOCS: Update URLs to match new CNAME `#68 <https://github.com/ansys/pyconceptev/pull/68>`_

`0.1.3 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.3>`_ - 2024-06-12
================================================================================

Changed
^^^^^^^

- chore: update CHANGELOG for v0.1.2 `#53 <https://github.com/ansys/pyconceptev/pull/53>`_
- CI: Use Trusted Publisher to release package `#59 <https://github.com/ansys/pyconceptev/pull/59>`_
- DOCS: Use ansys org instead of internal `#61 <https://github.com/ansys/pyconceptev/pull/61>`_
- DOC: Fix typo in pyproject.toml `#62 <https://github.com/ansys/pyconceptev/pull/62>`_
- CHORE: Use new repository name `#63 <https://github.com/ansys/pyconceptev/pull/63>`_
- CI: Refact release job `#66 <https://github.com/ansys/pyconceptev/pull/66>`_


Dependencies
^^^^^^^^^^^^

- CHORE: Bump pytest-cov from 4.1.0 to 5.0.0 `#38 <https://github.com/ansys/pyconceptev/pull/38>`_
- CHORE: Bump sphinx-autodoc-typehints from 2.1.0 to 2.1.1 `#56 <https://github.com/ansys/pyconceptev/pull/56>`_
- CHORE: Bump pytest from 7.4.4 to 8.2.2 `#57 <https://github.com/ansys/pyconceptev/pull/57>`_
- CHORE: Bump tox from 4.15.0 to 4.15.1 `#58 <https://github.com/ansys/pyconceptev/pull/58>`_
- CHORE: Bump jupyterlab from 4.2.1 to 4.2.2 `#60 <https://github.com/ansys/pyconceptev/pull/60>`_


Miscellaneous
^^^^^^^^^^^^^

- DOCS: Minor doc edits based on doc rendering `#55 <https://github.com/ansys/pyconceptev/pull/55>`_

`0.1.2 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.2>`_ - 2024-06-04
=====================================================================================

Changed
^^^^^^^

- CHORE: Bump development version to 0.2.dev0 `#44 <https://github.com/ansys/pyconceptev/pull/44>`_
- chore: update CHANGELOG for v0.1.1 `#48 <https://github.com/ansys/pyconceptev/pull/48>`_
- DOCS: Fix non clickable cards `#49 <https://github.com/ansys/pyconceptev/pull/49>`_


Miscellaneous
^^^^^^^^^^^^^

- DOCS: Update URLs in README.rst `#50 <https://github.com/ansys/pyconceptev/pull/50>`_

`0.1.1 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.1>`_ - 2024-06-03
=====================================================================================

Changed
^^^^^^^

- CHORE: update CHANGELOG for v0.1.0 `#46 <https://github.com/ansys/pyconceptev/pull/46>`_
- CI: Fix release jobs `#47 <https://github.com/ansys/pyconceptev/pull/47>`_

`0.1.0 <https://github.com/ansys/pyconceptev/releases/tag/v0.1.0>`_ - 2024-06-03
=====================================================================================

Changed
^^^^^^^

- CHORE: Update following OSS review `#36 <https://github.com/ansys/pyconceptev/pull/36>`_
- First-pass of overall doc review `#39 <https://github.com/ansys/pyconceptev/pull/39>`_
- DOCS: Rework example documentation `#43 <https://github.com/ansys/pyconceptev/pull/43>`_
- CHORE: Clean up ci_cd.yml and pyproject.toml `#45 <https://github.com/ansys/pyconceptev/pull/45>`_


Miscellaneous
^^^^^^^^^^^^^

- CHORE: Second pass of oss code review `#37 <https://github.com/ansys/pyconceptev/pull/37>`_
- Doc edits based on skimming rendered doc `#41 <https://github.com/ansys/pyconceptev/pull/41>`_

.. vale on